--- a/manifest.json
+++ b/manifest.json
@@ -157,6 +157,23 @@
 			"chineseTraditional": {},
 			"japanese": {}
 		},
+		"002A8555DD95FAF5": {
+			"english": {
+				"2541770964": "Season 2"
+			},
+			"french": {
+				"2541770964": "Saison 2"
+			},
+			"italian": {},
+			"german": {},
+			"spanish": {
+				"2541770964": "Temporada 2"
+			},
+			"russian": {},
+			"chineseSimplified": {},
+			"chineseTraditional": {},
+			"japanese": {}
+		},
 		"008F3C517DB2A6AF": {
 			"english": {
 				"3766970434": "Season 3"
