Drop Support (Yipee)
Going back to hiatus.

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"version": "6.0.3",
+	"version": "6.1.5",
 	"id": "BurnTheWitch.HeritageUI",
 	"name": "Heritage UI",
 	"updateCheck": "https://raw.githubusercontent.com/The-Jaded-Obsidian-Witch/Heritage-UI-Update-Json/main/updater.json",
@@ -9,6 +9,8 @@
 	],
 	"blobsFolders": ["mod content/base/blobs"],
 	"frameworkVersion": "2.15.1",
+	"loadAfter": [
+	],
 	"localisation": {
 		"english": {
 			"UI_HERITAGE_QUICK_LOAD": "Quick Load",
@@ -31,22 +33,24 @@
 			"UI_HERITAGE_EVERGREEN": "Freelancer",
 			"UI_HERITAGE_DASHBOARD": "Dashboard",
 			"UI_MENU_PAGE_HITS_ELEMENT_CATEGORY_SARAJEVOSIX_HEADER": "HITMAN: PlayStation 4 Exclusive",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S0": "Signature",
+			"UI_ITEM_SUBTYPE_S0": "Signature",
 			"UI_ITEM_SUBTYPE_IN_PLURAL_S1": "Season 1",
 			"UI_ITEM_SUBTYPE_S1": "Season 1",
 			"UI_ITEM_SUBTYPE_IN_PLURAL_S2": "Season 2",
 			"UI_ITEM_SUBTYPE_S2": "Season 2",
 			"UI_ITEM_SUBTYPE_IN_PLURAL_S3": "Season 3",
 			"UI_ITEM_SUBTYPE_S3": "Season 3",
-			"UI_ITEM_SUBTYPE_S8": "Freelancer",
-			"UI_ITEM_SUBTYPE_IN_PLURAL_S8": "Freelancer",
-			"UI_ITEM_SUBTYPE_IN_PLURAL_S5": "GOTY",
-			"UI_ITEM_SUBTYPE_S5": "GOTY",
-			"UI_ITEM_SUBTYPE_IN_PLURAL_S6": "Deluxe",
-			"UI_ITEM_SUBTYPE_S6": "Deluxe",
-			"UI_ITEM_SUBTYPE_IN_PLURAL_S7": "Deadly Sins",
-			"UI_ITEM_SUBTYPE_S7": "Deadly Sins",
-			"UI_ITEM_SUBTYPE_IN_PLURAL_S0": "Signature",
-			"UI_ITEM_SUBTYPE_S0": "Signature",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S4": "GOTY",
+			"UI_ITEM_SUBTYPE_S4": "GOTY",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S5": "Deluxe",
+			"UI_ITEM_SUBTYPE_S5": "Deluxe",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S6": "Deadly Sins",
+			"UI_ITEM_SUBTYPE_S6": "Deadly Sins",
+			"UI_ITEM_SUBTYPE_S7": "Freelancer",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S7": "Freelancer",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S8": "Modded",
+			"UI_ITEM_SUBTYPE_S8": "Modded",
 			"UI_ITEM_SUBTYPE_IN_PLURAL_EVERGREEN_KILL_METHOD_PISTOL": "Dart Guns",
 			"UI_ITEM_SUBTYPE_EVERGREEN_KILL_METHOD_PISTOL": "Dart Gun"
 		},
@@ -70,7 +74,45 @@
 			"UI_HERITAGE_DASHBOARD": "Dashboard"
 		},
 		"italian": {},
-		"german": {},
+		"german": {			
+			"UI_HERITAGE_QUICK_LOAD": "Schnellladen",
+			"UI_HERITAGE_QUICK_SAVE": "Schnellspeichern",
+			"UI_HERITAGE_SEASON_1": "Season 1",
+			"UI_HERITAGE_SEASON_2": "Season 2",
+			"UI_HERITAGE_SEASON_3": "Season 3",
+			"UI_SEASON_1_HEADER": "HITMAN",
+			"UI_SEASON_2_HEADER": "HITMAN 2",
+			"UI_SEASON_3_HEADER": "HITMAN 3",
+			"UI_HERITAGE_ESC_TITLE": "Eskalationen",
+			"UI_HERITAGE_GAMEMODES": "Spielmodi",
+			"UI_MENU_PAGE_SIDE_MISSIONS_TITLE_HEADER": "Erweiterungsinhalte",
+			"UI_CAMPAIGN_ICA_FACILITY_TITLE_HEADER": "Gratis Starter Paket",
+			"UI_MENU_PAGE_HUB_SEVEN_DEADLY_SINS_HEADER": "HITMAN 3: Die Sieben Todsünden Kollektion",
+			"UI_MENU_PAGE_SPECIAL_ASSIGNMENTS_TITLE_HEADER": "HITMAN 2: Silber Edition",
+			"UI_CONTRACT_CAMPAIGN_WHITE_SPIDER_TITLE_HEADER": "HITMAN: Game of the Year Edition",
+			"UI_MENU_PAGE_BONUS_MISSIONS_TITLE_HEADER": "HITMAN: Die volle Erfahrung",
+			"UI_HERITAGE_GAMEMODE": "Spielmodi",
+			"UI_HERITAGE_EVERGREEN": "Freelancer",
+			"UI_HERITAGE_DASHBOARD": "Dashboard",
+			"UI_MENU_PAGE_HITS_ELEMENT_CATEGORY_SARAJEVOSIX_HEADER": "HITMAN: PlayStation 4 Exklusiv",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S1": "Season 1",
+			"UI_ITEM_SUBTYPE_S1": "Season 1",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S2": "Season 2",
+			"UI_ITEM_SUBTYPE_S2": "Season 2",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S3": "Season 3",
+			"UI_ITEM_SUBTYPE_S3": "Season 3",
+			"UI_ITEM_SUBTYPE_S8": "Freelancer",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S8": "Freelancer",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S5": "GOTY",
+			"UI_ITEM_SUBTYPE_S5": "GOTY",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S6": "Deluxe",
+			"UI_ITEM_SUBTYPE_S6": "Deluxe",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S7": "Todsünden",
+			"UI_ITEM_SUBTYPE_S7": "Todsünden",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_S0": "Signatur",
+			"UI_ITEM_SUBTYPE_S0": "Signatur",
+			"UI_ITEM_SUBTYPE_IN_PLURAL_EVERGREEN_KILL_METHOD_PISTOL": "Pfeilpistolen",
+			"UI_ITEM_SUBTYPE_EVERGREEN_KILL_METHOD_PISTOL": "Pfeilpistole"},
 		"spanish": {
 			"UI_HERITAGE_SEASON_1": "Temporada 1",
 			"UI_HERITAGE_SEASON_2": "Temporada 2",
@@ -199,6 +241,15 @@
 			"image": "framework content/UI_Base.png",
 			"type": "select",
 			"group": "UI Style"
+		},
+		{
+			"name": "Vanilla (Clean)",
+			"tooltip": "Hitman WOA's Vanilla UI but cleaner, inspired by Readable UI. Removes caps lock from all text, cleans up the minimap while adding Heritage UI specific asset changes for the minimap, blind fire/shotgun crosshairs and fixing inconsistent sprite coloring in Sniper Assassin. Does not include scaling changes like Readable UI.",
+			"image": "framework content/UI_heritage_alpha.png",
+			"type": "select",
+			"group": "UI Style",
+			"contentFolders": ["mod content/ui styles/heritage ui alpha"],
+			"blobsFolders": ["mod content/ui styles/blobs"]
 		},
 		{
 			"name": "Heritage UI",
@@ -819,6 +870,11 @@
 				"004B8C5124A49543": {
 					"english": {
 						"3944984988": "Blue Streak Suit",
+						"135933874": "Sunset Streak Suit",
+						"3199382373": "Midnight Clubbing Suit",
+						"3180102579": "Public Enemy Suit",
+						"1171393183": "Purple Streak Suit",
+						"3368934709": "Christmas Casual Suit",
 						"2874408294": "17's Signature Suit",
 						"3140229008": "Green Streak Suit",
 						"4083485844": "Black Streak Suit",
