refactor: Switch full JSON file replacement with patch to help improve cross-mod compatibility
Featured Contracts Improvements (FCI) uses a patch file on hitscategory_contracts.json to add filtering logic on featured contracts.  With HUI currently replacing the entire file, either (1) the filtering logic silently stops working or (2) SMF fails to apply FCI's patch file on the replaced JSON.  By switching this file to a patch JSON, both mods can work without conflict.

--- a/manifest.json
+++ b/manifest.json
@@ -771,6 +771,9 @@
 			"blobsFolders": [
 				"mod content/menus/gamemodes menu/blobs"
 			],
+			"contentFolders": [
+				"mod content/menus/gamemodes menu/content"
+			],
 			"enabledByDefault": true
 		},
 		{
